--- a/login.css
+++ b/login.css
@@ -148,3 +148,16 @@ header img {
 .footer a:hover{
     text-decoration: underline;
 }
+
+@media only screen and (max-width: 600px){
+  .login__container{
+    padding: 0px;
+    background-color: transparent;
+    border: none;
+  }
+
+  .footer{
+    align-items: flex-start;
+    flex-direction: column;
+  }
+} 
